ticketing/infra/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingres.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-clusterip-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-clusterip-service
              servicePort: 3000
